backport: re PR target/64513 (ICE: in maybe_record_trace_start, at dwarf2cfi.c:2231 with -mstack-arg-probe)

Backported from mainline
	2015-01-12  Jakub Jelinek  <jakub@redhat.com>

	PR target/64513
	* config/i386/i386.c (ix86_expand_prologue): Add
	REG_FRAME_RELATED_EXPR to %rax and %r10 pushes.

	* gcc.target/i386/pr64513.c: New test.

From-SVN: r219618